# BACnet

./: .gitignore  README.md
21-fs-ias-lec/14-BAC-News/: pyproject.toml
21-fs-ias-lec/14-BAC-News/app/gui/: main_window.py  utils.py
21-fs-ias-lec/14-BAC-News/app/logic/: article.py  file_handler.py  interface.py
21-fs-ias-lec/14-BAC-News/app/transfer/: LAN_client.py  LAN_server.py  bt_client.py
21-fs-ias-lec/14-BAC-News/tests/: test_news_scraper.py
21-fs-ias-lec/3-BACnetCore/: README.md  setup.cfg
21-fs-ias-lec/3-BACnetCore/Documents/: Projektverlauf.md  classStructures_Nico.md  presentation.pptx  presentation_2.pptx
21-fs-ias-lec/3-BACnetCore/Documents/libStructure/: API.md  BACnetCore_classDiagram.vsdx  bacNetProposal_Raphael.vsdx  documentation.md
21-fs-ias-lec/3-BACnetCore/DocumentsDiagrams/: BACNet_HowItWorks.tex
21-fs-ias-lec/3-BACnetCore/DocumentsDiagrams/libStructure/: bacNetProposal_Raphael.vsdx  classStructures_Nico.md  samplecode_usage.py
21-fs-ias-lec/3-BACnetCore/samples/: basic_sample.py  communication_udp.py  communication_udp_p2.py  create_feed_sample.py  load_db_and_feeds_sample.py
21-fs-ias-lec/3-BACnetCore/src/: constants.py
21-fs-ias-lec/3-BACnetCore/src/Core/: com_link.py  event.py  node.py  storage_controller.py
21-fs-ias-lec/3-BACnetCore/src/Replication/: channel.py  message_container.py  p2p_channel.py  sneakernet.py  udp_channel.py
21-fs-ias-lec/3-BACnetCore/src/core/: com_link.py  node.py  storage_controller.py
21-fs-ias-lec/3-BACnetCore/src/replication/: channel.py  (+2 more)
21-fs-ias-lec/3-BACnetCore/tests/: basic_test.py
(+1310 files in other folders)
