[metadata]
name = BACnetCore
version = 0.0.1
author = Tim Bachmann, Raphael Kreft, Nico Aebischer
author_email = t.bachmann@unibas.ch, r.kreft@unibas.ch, nico.aebischer@stud.unibas.ch
description = Python Package that offers all functionality needed to work with BACNet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RaphaelKreft/BACnet
project_urls =
    Bug Tracker = https://github.com/RaphaelKreft/BACnet/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Natural Language :: English
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = ["sqlalchemy", "pynacl", "hashlib"]

[options.packages.find]
where = src